<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST115_Feeder_e" Id="{cc37ee37-bc3e-4846-8d73-2e341d83d408}">
    <Declaration><![CDATA[TYPE ST115_Feeder_e : ST110_Feeder_e;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>